objects/hed__Test_Definition__mdt.object
<CustomObject>
    <description>Identifies the type of Test taken and the Test provider. For example, the SAT administered by the College Board.</description>
    <label>Test Definition</label>
    <pluralLabel>Test Definitions</pluralLabel>
    <fields>
        <fullName>hed__Test_Type__c</fullName>
        <description>The name of the Test. For example, SAT or TOEFL.</description>
        <inlineHelpText>The name of the Test. For example, SAT or TOEFL.</inlineHelpText>
        <label>Test Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAT</fullName>
                </value>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>GRE</fullName>
                </value>
                <value>
                    <fullName>GMAT</fullName>
                </value>
                <value>
                    <fullName>TOEFL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>The description of the Test.</description>
        <inlineHelpText>The description of the Test.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>hed__Issuer_Name__c</fullName>
        <description>The name of the organization who issued the Test.</description>
        <inlineHelpText>The name of the organization who issued the Test.</inlineHelpText>
        <label>Issuer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Issuer_Email__c</fullName>
        <description>The email address of the organization issuing the test.</description>
        <inlineHelpText>The email address of the organization issuing the test.</inlineHelpText>
        <label>Issuer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>hed__Academic_Level__c</fullName>
        <description>The grade-level, developmental level, or age-level that the Test Definition was designed for.</description>
        <inlineHelpText>The Academic Level of the Test. For example, the Test was offered in High School.</inlineHelpText>
        <label>Academic Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-K/Preschool</fullName>
                    <default>true</default>
                    <label>Pre-K/Preschool</label>
                </value>
                <value>
                    <fullName>Elementary</fullName>
                </value>
                <value>
                    <fullName>Middle School</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Doctoral</fullName>
                </value>
                <value>
                    <fullName>Post-Baccalaureate Certificate</fullName>
                </value>
                <value>
                    <fullName>Adult Education</fullName>
                </value>
                <value>
                    <fullName>Professional Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Credits_Available__c</fullName>
        <description>The number of credits that could be earned taking the Test.</description>
        <inlineHelpText>The number of credits that could be earned taking the Test.</inlineHelpText>
        <label>Credits Available</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Credentialing_Identifier__c</fullName>
        <description>An International Resource Identifier that uniquely identifies this credential.</description>
        <inlineHelpText>An International Resource Identifier that uniquely identifies this credential.</inlineHelpText>
        <label>Credentialing Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>hed__Issuer_Credentialing_Identifier__c</fullName>
        <description>An International Resource Identifier that uniquely identifies the issuing organization of this type of Test for credentialing purposes.</description>
        <inlineHelpText>An International Resource Identifier that uniquely identifies the issuing organization of this type of Test for credentialing purposes.</inlineHelpText>
        <label>Issuer Credentialing Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>hed__All_Test_Definitions</fullName>
        <columns>MasterLabel</columns>
        <columns>hed__Test_Type__c</columns>
        <columns>hed__Academic_Level__c</columns>
        <columns>hed__Issuer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Test Definitions</label>
        <language>en_US</language>
    </listViews>
</CustomObject>